2007-09-15  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-icons.c:

	Use the best interpolation method available.

2007-09-15  Zeeshan Ali  <zeenix@gstreamer.net>
	Lapo Calamandrei  <calamandrei@gmail.com>

	* src/pixmaps/network-light.png:

	Icon update for network-light.

2007-09-14  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/network-light-gui.c:
	* src/universal-cp-icons.c:

	Use g_build_filename() instead of g_strjoin() for filenames.

2007-09-14  Zeeshan Ali  <zeenix@gstreamer.net>
	Lapo Calamandrei  <calamandrei@gmail.com>

	* src/pixmaps/upnp-device.png:
	* src/pixmaps/upnp-state-variable.png:

	Icons update for device and state-variable.

2007-09-14  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/pixmaps/Makefile.am:
	* src/pixmaps/upnp-action-arg-in.png:
	* src/pixmaps/upnp-action-arg-out.png:
	* src/universal-cp-devicetreeview.c:
	* src/universal-cp-icons.c:
	* src/universal-cp-icons.h:

	New separate icons for in & out action arguments from Lapo
	Calamandrei.

2007-09-14  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/pixmaps/Makefile.am:
	* src/pixmaps/upnp-state-variables.png:
	* src/universal-cp-icons.c:
	* src/universal-cp-icons.h:

	Use 'GTK_STOCK_DIRECTORY' for the the parent node of the
	state-variables.

2007-09-14  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-eventtreeview.c:

	Strip newlines from value of the variable in events before displaying
	them and don't display the complete value if it's too big. User can
	get the complete value if she copy the event to the clipboard.

2007-09-14  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-actiondialog.c:

	Shrink the action dialog each time after removing the argument widgets.

2007-09-13  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-eventtreeview.c:
        
	Don't let the event treeview scroll-down.

2007-09-13  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/pixmaps/upnp-service.png:
	* src/pixmaps/upnp-state-variable.png:

	Icons update from Lapo Calamandrei.