@@ -1,3 +1,9 @@
+2007-09-16  Zeeshan Ali  <zeenix@gstreamer.net>
+
+	* src/universal-cp-actiondialog.c:
+
+	Put static labels of action dialog into a sizegroup.
+
 2007-09-15  Zeeshan Ali  <zeenix@gstreamer.net>
 
 	* src/universal-cp-icons.c:
